# remake_dpp

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.txt  PRD.md  PRD_DPP.md  README.md  coffee_machine.json  eclass_part_class_mapping.yaml  generate_dpp_json.py  isa95_part_class_mapping.yaml  package.json  pyproject.toml  usage.py  usage_test.py
.github/workflows/: publish.yml
config/: schemas.yml
david/: app.py  extractor.py  granite.py  main.py  pdf2image.py  pyproject.toml  transformers_test.py  vllm_granite_docling_command.txt  word2pdf.py
docs/: api-model.md  api-schema-registry.md  concepts-gas.md  docs.json  intro.md  quickstart.md  schemas-eclass.md  schemas-isa95.md  usage-python.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nmis_dpp/: __init__.py  adapters.py  api.py  cli.py  eclass_build_mapping.py  isa95_build_mapping.py  model.py  part_class.py  schema_base.py  schema_registry.py  utils.py
nmis_dpp/mappers/: __init__.py  battery_dpp_mapper.py  eclass_mapper.py  isa95_mapper.py
nmis_dpp/ontology_data/eclass_16/dictionary_assets_en/: ECLASS16_0_ASSET_EN_SG_13.xml  ECLASS16_0_ASSET_EN_SG_14.xml  ECLASS16_0_ASSET_EN_SG_15.xml  ECLASS16_0_ASSET_EN_SG_16.xml  ECLASS16_0_ASSET_EN_SG_17.xml  ECLASS16_0_ASSET_EN_SG_18.xml  ECLASS16_0_ASSET_EN_SG_20.xml  ECLASS16_0_ASSET_EN_SG_25.xml  ECLASS16_0_ASSET_EN_SG_26.xml  ECLASS16_0_ASSET_EN_SG_28.xml  ECLASS16_0_ASSET_EN_SG_29.xml  ECLASS16_0_ASSET_EN_SG_30.xml  ECLASS16_0_ASSET_EN_SG_31.xml  (+17 more)
remake_dpp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api.py  test_battery_dpp_mapper.py  test_mappers.py  test_model.py  test_part_class.py  test_registry_extended.py  test_schema_registry.py  test_schema_registry_second.py
(+1 files in other folders)
